--- a/html/index.html
+++ b/html/index.html
@@ -23,14 +23,14 @@
     <header>
         <div class ="nav">
             <div class="name">
-                <a href="/static-website/index.html">Po Yu Chao</a>
+                <a href="/html/index.html">Po Yu Chao</a>
             </div>
            
             <ul>
-                <li><a href="/static-website/about.html">About</a></li>
+                <li><a href="/html/about.html">About</a></li>
                 <li><a href="#projects">Project</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="/static-website/contact.html">Contacts</a></li>
+                <li><a href="/html/contact.html">Contacts</a></li>
             </ul>
             
         </div>
