adjust href path

--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
                 <p>I'm Po, a freelance web developer specialising in accessible and ethical websites for small charities, non-profits and brands using tech for good!</p>
                 <div class="buttons">
                     <a href="#projects" class="button">Projects</a>
-                    <a href="/static-website/about.html" class="button">More about me</a>
+                    <a href="/html/about.html" class="button">More about me</a>
                 </div>
             </div>
             
