Optimize the layout

--- a/html/about.html
+++ b/html/about.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="../CSS/body.css">
     <link rel="stylesheet" href="../CSS/about.css">
     <link rel="icon" type="image/x-icon" href="/Profile photo/Favicon-32x32.png">
+    <style>
+        h1 {
+            
+            font-size: 3rem;
+        }
+    </style>
     <title>about</title>
 </head>
 
@@ -37,7 +43,7 @@
     <main>
         <section class="about-me">
             <div class="content">
-                <h1>About me</h1>
+                <h1 style="color: #333">About me</h1>
                     <p>Hi there! My name is PoYu Chao from Kaohsiung,Taiwan. I currently completing my web development 
                         program at Vancouver and I am looking for a Web development opportunity.</p>
                 
