modify the navigation path

--- a/html/about.html
+++ b/html/about.html
@@ -27,14 +27,14 @@
         
         <div class ="nav">
             <div class="name">
-                <a href="/html/index.html">Po Yu Chao</a>
+                <a href="../index.html">Po Yu Chao</a>
             </div>
             
             <ul>
-                <li><a href="/html/about.html">About</a></li>
-                <li><a href="/html/index.html#projects">Project</a></li>
-                <li><a href="/html/index.html#skills">Skills</a></li>
-                <li><a href="/html/contact.html">Contacts</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="../index.html#projects">Project</a></li>
+                <li><a href="../index.html#skills">Skills</a></li>
+                <li><a href="./contact.html">Contacts</a></li>
             </ul>
         </div>
     </header>
