--- a/html/contact.html
+++ b/html/contact.html
@@ -12,25 +12,40 @@
     <link rel="stylesheet" href="../CSS/body.css">
     <link rel="stylesheet" href="../CSS/contact.css">
     <link rel="icon" type="image/x-icon" href="/Profile photo/Favicon-32x32.png">
+    <script src="../js/header.js"defer></script>
     <title>Contact</title>
 </head>
 
 <body>
-    <!-- Header section -->
-    <header>
-        
-        <div class ="nav">
+   
+      <!-- Header section -->
+      <header>
+        <div class="nav">
             <div class="name">
                 <a href="../index.html">Po Yu Chao</a>
             </div>
-            
-            <ul>
+
+
+            <ul class="sidebar">
+                <li onclick=hideSidebar()><a href="#"><img src="../icon/icons8-close-40.png" height="36"
+                            viewBox="0 96 960 960" width="36" alt="close"></a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="../index.html#projects">Project</a></li>
                 <li><a href="../index.html#skills">Skills</a></li>
                 <li><a href="./contact.html">Contacts</a></li>
             </ul>
+            <ul>
+                <li class="hideOnMobile"><a href="./about.html">About</a></li>
+                <li class="hideOnMobile"><a href="#projects">Project</a></li>
+                <li class="hideOnMobile"><a href="#skills">Skills</a></li>
+                <li class="hideOnMobile"><a href="./html/contact.html">Contacts</a></li>
+                <li class="menu_button" onclick=showSidebar() id="hamburgerMenu"><a href="#"><img
+                            src="../icon/icons8-hamburger-menu-50.png" height="36" viewBox="0 96 960 960" width="36"
+                            alt="Menu"></a></li>
+            </ul>
+
         </div>
+
     </header>
 
     <!--Main section-->
