--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#" style="--i:0;">About</a>
             <a href="#" style="--i:1;">Project</a>
             <a href="#" style="--i:2;">Skills</a>
-            <a href="#" style="--i:3;">Contact</a>
+            <a href="./html/contact.html" style="--i:3;">Contact</a>
         </nav>
 
     </header>
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="item">
                     <div class="item-text">
-                        <span>Html</span>
+                        <span>HTML</span>
                         <span class="w-90">90%</span>
                     </div>
                     <div class="progress">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="item">
                     <div class="item-text">
-                        <span>Css</span>
+                        <span>CSS</span>
                         <span class="w-80">80%</span>
                     </div>
                     <div class="progress">
@@ -170,15 +170,7 @@
                         <div class="progress-bar w-70"></div>
                     </div>
                 </div>
-                <div class="item">
-                    <div class="item-text">
-                        <span>C++</span>
-                        <span class="w-70">70%</span>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar w-70"></div>
-                    </div>
-                </div>
+              
                 <div class="item">
                     <div class="item-text">
                         <span>SQL</span>
@@ -206,15 +198,7 @@
                         <div class="progress-bar w-85"></div>
                     </div>
                 </div>
-                <div class="item">
-                    <div class="item-text">
-                        <span>Leetcode</span>
-                        <span class="w-90">90%</span>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar w-90"></div>
-                    </div>
-                </div>
+               
             </div>
 
         </section>
