--- a/html/contact.html
+++ b/html/contact.html
@@ -20,7 +20,10 @@
    
       <!-- Header section -->
       <header class="header">
-        <a href="#" class="ChaoPoYu">PoYu Chao</a>
+        <div class="left-content">
+            <a href="../index.html"class="ChaoPoYu">PoYu Chao</a>
+            <img src="../icon/icons8-sun-48.png" alt="Day-and-night-buttom" id="day-night">
+        </div>
 
         <input type="checkbox" id="check">
         <label for="check" class="icons">
@@ -29,10 +32,10 @@
         </label>
 
         <nav class="navbar">
-            <a href="#" style="--i:0;">About</a>
-            <a href="#" style="--i:1;">Project</a>
-            <a href="#" style="--i:2;">Skills</a>
-            <a href="./html/contact.html" style="--i:3;">Contact</a>
+            <a href="./about.html" style="--i:0;">About</a>
+            <a href="../index.html#projects" style="--i:1;">Project</a>
+            <a href="../index.html#skills" style="--i:2;">Skills</a>
+            <a href="../html/contact.html" style="--i:3;">Contact</a>
         </nav>
 
     </header>
