update about page

--- a/html/contact.html
+++ b/html/contact.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="../CSS/body.css">
     <link rel="stylesheet" href="../CSS/contact.css">
     <link rel="icon" type="image/x-icon" href="/Profile photo/Favicon-32x32.png">
-    <script src="../js/header.js"defer></script>
+    <!-- <script src="../js/header.js" defer></script> -->
+    <script src="../js/dayandnight-others.js" defer></script>
     <title>Contact</title>
 </head>
 
@@ -43,7 +44,7 @@
     <!--Main section-->
     <main>
         <div class="contact-form-container">
-            <h1>Contact Me<img src="/icon/icons8-contact-64 .png" alt="Icon" class="contact-icon"> </h1>
+            <h1>Contact Me<img src="../icon/icons8-contact-64 .png" alt="Icon" class="contact-icon"> </h1>
             <form action="your-server-side-script" method="POST">
                 <div class="form-row">
                     <div class="input-group">
