--- a/html/about.html
+++ b/html/about.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../CSS/about.css">
     <link rel="icon" type="image/x-icon" href="/Profile photo/Favicon-32x32.png">
     <script src="../js/header.js"defer></script>
+    <script src="../js/dayandnight-others.js" defer></script>
     <style>
         h1 {
             
@@ -25,8 +26,12 @@
 
 <body>
         <!-- Header section -->
-      <header class="header">
-        <a href="../index.html" class="ChaoPoYu">PoYu Chao</a>
+       <!-- Header section -->
+       <header class="header">
+        <div class="left-content">
+            <a href="../index.html"class="ChaoPoYu">PoYu Chao</a>
+            <img src="../icon/icons8-sun-48.png" alt="Day-and-night-buttom" id="day-night">
+        </div>
 
         <input type="checkbox" id="check">
         <label for="check" class="icons">
