adjust the image path

--- a/html/about.html
+++ b/html/about.html
@@ -63,7 +63,7 @@
                 <a href="https://drive.google.com/file/d/1IwNV0rdm4AbAGTSGdLWP0DXLauzW2Qx-/view?usp=drive_link" class="resume-button">Download CV</a>
             </div>
             <div class="profile-picture">
-                <img src="/Profile photo/me.jpg" alt="Profile Picture">
+                <img src="../Profile photo/me.jpg" alt="Profile Picture">
             </div>
         </section>
     </main>
@@ -71,9 +71,9 @@
     <!--footer-->
     <footer>
         <div class="footer-icons">
-          <a href="https://www.instagram.com/killyen444/" target="_blank"><img src="/icon/icons8-instagram-50.png" alt="Instagram"></a>
-          <a href="https://www.linkedin.com/in/poyu-chao" target="_blank"><img src="/icon/icons8-linkedin-logo-50.png" alt="LinkedIn"></a>
-          <a href="mailto:YOUR_EMAIL"><img src="/icon/icons8-email-50.png" alt="Email"></a>
+          <a href="https://www.instagram.com/killyen444/" target="_blank"><img src="../icon/icons8-instagram-50.png" alt="Instagram"></a>
+          <a href="https://www.linkedin.com/in/poyu-chao" target="_blank"><img src="../icon/icons8-linkedin-logo-50.png" alt="LinkedIn"></a>
+          <a href="mailto:YOUR_EMAIL"><img src="../icon/icons8-email-50.png" alt="Email"></a>
         </div>
         <div class="footer-text">
             Po Yu Chao © 2024
