--- a/html/contact.html
+++ b/html/contact.html
@@ -74,9 +74,9 @@
     <!--footer-->
     <footer>
         <div class="footer-icons">
-            <a href="https://www.instagram.com/killyen444/" target="_blank"><img src="/icon/icons8-instagram-50.png" alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/poyu-chao" target="_blank"><img src="/icon/icons8-linkedin-logo-50.png" alt="LinkedIn"></a>
-            <a href="mailto:YOUR_EMAIL"><img src="/icon/icons8-email-50.png" alt="Email"></a>
+            <a href="https://www.instagram.com/killyen444/" target="_blank"><img src="../icon/icons8-instagram-50.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/poyu-chao" target="_blank"><img src="../icon/icons8-linkedin-logo-50.png" alt="LinkedIn"></a>
+            <a href="mailto:YOUR_EMAIL"><img src="../icon/icons8-email-50.png" alt="Email"></a>
         </div>
         <div class="footer-text">
             Po Yu Chao © 2024
