adjust layout in about page

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                 <!-- dynamic text -->
                 <h1 class="typing-animation">Hello, my name is <span class="name-highlight">Po Yu Chao</span></h1>
 
-                <p>I'm Po, a freelance web developer specialising in accessible and ethical websites for small
-                    charities, non-profits and brands using tech for good!</p>
+                <p>Hello! My name is Po, and I'm a passionate freelance web developer. If my skills align with what you're seeking, please don't hesitate to connect with me.</p>
                 <div class="buttons">
                     <a href="#projects" class="button">Projects</a>
                     <a href="./html/about.html" class="button">More about me</a>
