--- a/html/about.html
+++ b/html/about.html
@@ -52,7 +52,7 @@
     <main>
         <section class="about-me">
             <div class="content">
-                <h1 style="color: #333">About me</h1>
+                <h1>About me</h1>
                     <p>Hi there! My name is PoYu Chao from Kaohsiung,Taiwan. I currently completing my web development 
                         program at Vancouver and I am looking for a Web development opportunity.</p>
                 
