add 404 error page

--- a/html/contact.html
+++ b/html/contact.html
@@ -45,6 +45,8 @@
     <main>
         <div class="contact-form-container">
             <h1>Contact Me<img src="../icon/icons8-contact-64 .png" alt="Icon" class="contact-icon"> </h1>
+            <!-- your-server-side-script php file name -->
+            <!-- POST method is commonly used to submit data to be processed to a specified resource. -->
             <form action="your-server-side-script" method="POST">
                 <div class="form-row">
                     <div class="input-group">
