--- a/404.html
+++ b/404.html
@@ -14,6 +14,6 @@
 <body>
     <h1>Oops! 404 Page not found.</h1>
     <p>We can't seem to find the page you're looking for.</p>
-    <p><a href="/">Go to Home</a></p>
+    <p><a href="./index.html">Go to Home</a></p>
 </body>
 </html>
