--- a/html/about.html
+++ b/html/about.html
@@ -69,7 +69,7 @@
                     needs, please don’t hesitate to get in touch!
                 </p>
 
-                <a href="https://drive.google.com/file/d/1IwNV0rdm4AbAGTSGdLWP0DXLauzW2Qx-/view?usp=drive_link"
+                <a href="https://drive.google.com/file/d/1IwNV0rdm4AbAGTSGdLWP0DXLauzW2Qx-/view?usp=drive_link" target="_blank"
                     class="resume-button">Download CV</a>
             </div>
             <div class="profile-picture">
