add flip feature on profile image

--- a/html/about.html
+++ b/html/about.html
@@ -73,7 +73,18 @@
                     class="resume-button">Download CV</a>
             </div>
             <div class="profile-picture">
-                <img src="../Profile photo/me.jpg" alt="Profile Picture">
+                <div class="flip-container">
+                    <div class="flipper">
+                        <div class="front">
+                            <!-- Front content goes here -->
+                            <img src="../Profile photo/me.jpg" alt="Front">
+                        </div>
+                        <div class="back">
+                            <!-- Back content goes here -->
+                            <img src="../Profile photo/mememe.jpg" alt="Back">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -92,7 +103,7 @@
         </div>
     </footer>
 
-
+  
 
 </body>
 
