adjust the index layout

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <section class="hero-section">
             <div class="image-section">
-                <img src="./Profile%20photo/mememe.jpg" alt="Po Yu Chao">
+                <img src="./Profile%20photo/me.jpg" alt="Po Yu Chao">
             </div>
 
             <div class="text-section">
