--- a/index.html
+++ b/index.html
@@ -54,16 +54,19 @@
             </div>
 
             <div class="text-section">
+                <div class="text-section-container">
+                    <h3>Web Developer</h3>
+                    <!-- dynamic text -->
+                    <h1 class="typing-animation">Hello, my name is <span class="name-highlight">Po Yu Chao</span></h1>
+                    
+                    
+                    <p>Hello! My name is Po, and I'm a passionate freelance web developer. If my skills align with what
+                        you're seeking, please don't hesitate to connect with me.</p>
 
-                <h3>Web Developer</h3>
-                <!-- dynamic text -->
-                <h1 class="typing-animation">Hello, my name is <span class="name-highlight">Po Yu Chao</span></h1>
-
-                <p>Hello! My name is Po, and I'm a passionate freelance web developer. If my skills align with what
-                    you're seeking, please don't hesitate to connect with me.</p>
-                <div class="buttons">
-                    <a href="#projects" class="button">Projects</a>
-                    <a href="./html/about.html" class="button">More about me</a>
+                    <div class="buttons">
+                        <a href="#projects" class="button">Projects</a>
+                        <a href="./html/about.html" class="button">More about me</a>
+                    </div>
                 </div>
             </div>
 
