add animation to button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./CSS/skills.css">
     <script src="./js/project.js" defer></script>
     <script src="./js/dayandnight.js" defer></script>
+    <script src="./js/fade-in-animation.js"defer></script>
     <!-- <script src="./js/header.js"defer></script> -->
     <link rel="icon" type="image/x-icon" href="/Profile%20photo/Favicon-32x32.png">
     <title>PoYu Portfolio Website</title>
@@ -119,15 +120,7 @@
                 <button id="slide-right">&gt;&gt;</button>
             </div>
 
-         
         </section>
-
-
-
-
-
-
-
 
         <!--End of project section-->
         <!--Skills section-->
