create developer branch

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="./js/fade-in-animation.js"defer></script>
     <!-- <script src="./js/header.js"defer></script> -->
     <link rel="icon" type="image/x-icon" href="/Profile%20photo/Favicon-32x32.png">
-    <title>PoYu Portfolio Website</title>
+    <title>PoYu Portfolio website</title>
 </head>
 
 <body>
