--- a/html/about.html
+++ b/html/about.html
@@ -92,11 +92,11 @@
     <!--footer-->
     <footer>
         <div class="footer-icons">
-            <a href="https://www.instagram.com/killyen444/" target="_blank"><img src="../icon/icons8-instagram-50.png"
-                    alt="Instagram"></a>
+            <a href="https://github.com/Poyuchao" target="_blank"><img src="../icon/icons8-github-50-day.png"
+                    alt="github" id="git"></a>
             <a href="https://www.linkedin.com/in/poyu-chao" target="_blank"><img
-                    src="../icon/icons8-linkedin-logo-50.png" alt="LinkedIn"></a>
-            <a href="mailto:YOUR_EMAIL"><img src="../icon/icons8-email-50.png" alt="Email"></a>
+                    src="../icon/icons8-linkedin-logo-50.png" alt="LinkedIn" id="linked"></a>
+            <a href="mailto:YOUR_EMAIL"><img src="../icon/icons8-email-50.png" alt="Email" id="e-mail"></a>
         </div>
         <div class="footer-text">
             Po Yu Chao © 2024
