--- a/html/about.html
+++ b/html/about.html
@@ -30,7 +30,7 @@
     <header class="header">
         <div class="left-content">
             <a href="../index.html" class="ChaoPoYu">PoYu Chao</a>
-            <img src="../icon/icons8-sun-48.png" alt="Day-and-night-buttom" id="day-night">
+            <img src="../icon/icons8-moon-48.png" alt="Day-and-night-buttom" id="day-night">
         </div>
 
         <input type="checkbox" id="check">
@@ -60,14 +60,13 @@
                 <p>Hi there! My name is PoYu Chao from Kaohsiung,Taiwan. I currently completing my web development
                     program at Vancouver and I am looking for a Web development opportunity.</p>
 
-                <p>
-                    I completed an internship with the German company <a href="https://phase.com/" target="_blank"
-                        class="company-link">Phase</a> in last summer (2023), where I specialized in Quality Assurance.
-                    Additionally, I have freelanced in UI bug fixing for several months. My technical experience spans a
-                    broad range of programming languages including Java, Python, C#, and JavaScript, as well as database
-                    design and web development with frameworks like React and ASP.NET. If my skill set aligns with your
-                    needs, please don’t hesitate to get in touch!
-                </p>
+                    <p>
+                        I completed an internship with the German company <strong><a href="https://phase.com/" target="_blank" class="company-link">Phase</a></strong> 
+                        last summer (2023), where I specialized in Quality Assurance. Additionally, I have freelanced in UI bug fixing for several months.
+                         My technical experience spans a broad range of programming languages including <em>Java, Python, C#, and JavaScript</em>, as well as database design and web development with frameworks like <em>React and ASP.NET</em>. 
+                         If my skill set aligns with your needs, please don’t hesitate to get in touch!
+                    </p>
+                    
 
                 <a href="https://drive.google.com/file/d/1IwNV0rdm4AbAGTSGdLWP0DXLauzW2Qx-/view?usp=drive_link" target="_blank"
                     class="resume-button">Download CV</a>
