--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="header">
         <div class="left-content">
             <a href="./index.html" class="ChaoPoYu">PoYu Chao</a>
-            <img src="./icon/icons8-sun-48.png" alt="Day-and-night-buttom" id="day-night">
+            <img src="./icon/icons8-moon-48.png" alt="Day-and-night-buttom" id="day-night">
         </div>
         <input type="checkbox" id="check">
         <label for="check" class="icons">
@@ -42,6 +42,7 @@
             <a href="./index.html#projects" style="--i:1;">Project</a>
             <a href="./index.html#skills" style="--i:2;">Skills</a>
             <a href="./html/contact.html" style="--i:3;">Contact</a>
+      
         </nav>
 
     </header>
