--- a/FAQ.html
+++ b/FAQ.html
@@ -50,6 +50,15 @@
             padding: 0;
             margin: 0;
         }
+
+        .faq-container{
+            display:flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            gap:4rem;
+            padding:2rem 1rem;
+           
+        }
     </style>
 </head>
 <body>
