--- a/html/contact.html
+++ b/html/contact.html
@@ -23,7 +23,7 @@
     <header class="header">
         <div class="left-content">
             <a href="../index.html" class="ChaoPoYu">PoYu Chao</a>
-            <img src="../icon/icons8-sun-48.png" alt="Day-and-night-buttom" id="day-night">
+            <img src="../icon/icons8-moon-48.png" alt="Day-and-night-buttom" id="day-night">
         </div>
 
         <input type="checkbox" id="check">
